[project]
name = "nexusep"
version = "0.1.0"
description = "Nexus EUReCA Platform: an object-oriented urban energy simulation framework."
authors = [
    { name = "Mohamad Hasan Khajedehi" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "shapely",
    "pyproj",
    "rasterio",
    "scipy",
    "lxml",
    "pydantic",
    "pyarrow"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"